minimega/web: Tweak column labels, positions and visibility. Add Host label to screenshots. Make screenshots searchable by Host and State also. Disable auto-refresh above a certain number of VMs to mitigate performance issues when there are lots of VMs.

--- a/misc/web/css/minimega.css
+++ b/misc/web/css/minimega.css
@@ -188,6 +188,15 @@ div.box-content {
 
 .screenshot-label {
 	position: absolute;
+	top: -1px;
+	left: -1px;
+	color: white;
+	padding: 1px 13px;
+	border-radius: 0 6px 0 0;
+}
+
+.screenshot-label-host {
+	position: absolute;
 	bottom: -1px;
 	left: -1px;
 	color: white;
